in sculpt mode is impossible to cancel the -Extract Face Set- operation #82615

Closed
opened 2020-11-11 14:17:31 +01:00 by Massimiliano Puliero · 8 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.38

Blender Version
Broken: version: 2.91.0 Beta, branch: master, commit date: 2020-11-08 13:39, hash: 06dac0a453

Short description of error
In sculpt mode is impossible to cancel the "extract face set" operation from the Face Sets panel.

Exact steps for others to reproduce the error
Open the attached blend file, go in sculpt mode, select the "face set" panel and click on "extract face set".
As you can see it is not possible to press ESC to cancel the operation and clicking on empty space will lead to confirm the operation.

I think ESC should work as for the other operators inside Blender and clicking on empty spece should extract nothing.

Thank you.

facesets.blend

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.38 **Blender Version** Broken: version: 2.91.0 Beta, branch: master, commit date: 2020-11-08 13:39, hash: `06dac0a453` **Short description of error** In sculpt mode is impossible to cancel the "extract face set" operation from the Face Sets panel. **Exact steps for others to reproduce the error** Open the attached blend file, go in sculpt mode, select the "face set" panel and click on "extract face set". As you can see it is not possible to press ESC to cancel the operation and clicking on empty space will lead to confirm the operation. I think ESC should work as for the other operators inside Blender and clicking on empty spece should extract nothing. Thank you. [facesets.blend](https://archive.blender.org/developer/F9259849/facesets.blend)

Added subscriber: @MassimilianoPuliero

Added subscriber: @MassimilianoPuliero
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2020-11-11 15:18:45 +01:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

{key RMB} works for me, but it is true, blender usually uses both {key RMB} and {key ESC}, we should probably do it here as well. And for Detail sampling as well.

As for the clicking in empty space, will also check on this.

Not a bug though, setting to TODO.

{key RMB} works for me, but it is true, blender usually uses both {key RMB} and {key ESC}, we should probably do it here as well. And for Detail sampling as well. As for the clicking in empty space, will also check on this. Not a bug though, setting to TODO.

This issue was referenced by b4b4532ce0

This issue was referenced by b4b4532ce08d10468b04c42b092ef9cff603958d

This issue was referenced by 12dd26a2bb

This issue was referenced by 12dd26a2bbb37fc369956d9e2bcd7d851aafafde
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

12dd26a2bb and b4b4532ce0 are both in, so setting this to "Resolved"

12dd26a2bb and b4b4532ce0 are both in, so setting this to "Resolved"
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#82615
No description provided.